--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "full",
   "version": "1.0.0",
   "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Shivam Tyagi",
